--- a/index.html
+++ b/index.html
@@ -3,75 +3,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>منيو كافيه تجريبي</title>
+  <title>منيو كافيه نايت</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
       margin: 0;
-      padding: 20px;
-      direction: rtl;
+      font-family: 'Cairo', sans-serif;
+      background-color: #0d1b2a;
+      color: #ffffff;
     }
-    .container {
-      max-width: 700px;
+
+    .menu-container {
+      max-width: 1000px;
       margin: auto;
-      background: white;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      padding: 40px 20px;
     }
+
     h1 {
       text-align: center;
-      color: #c0392b;
-      margin-bottom: 30px;
+      font-size: 40px;
+      margin-bottom: 40px;
+      color: #00bcd4;
     }
+
+    .menu-columns {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+
+    .column {
+      flex: 1;
+      min-width: 250px;
+    }
+
     h2 {
-      border-bottom: 2px solid #c0392b;
-      padding-bottom: 5px;
-      margin-top: 30px;
+      color: #ffc107;
+      border-bottom: 1px solid #555;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
     }
+
     .item {
       display: flex;
       justify-content: space-between;
-      padding: 10px 0;
-      border-bottom: 1px dashed #ccc;
+      margin-bottom: 15px;
+      border-bottom: 1px dashed #555;
+      padding-bottom: 5px;
     }
-    .item:last-child {
-      border-bottom: none;
+
+    .item span {
+      font-size: 16px;
     }
-    .name {
-      font-weight: bold;
-    }
+
     .price {
-      color: #666;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>منيو كافيه روز</h1>
+  <div class="menu-container">
+    <h1>منيو كافيه نايت</h1>
+    <div class="menu-columns">
+      
+      <div class="column">
+        <h2>مشروبات ساخنة</h2>
+        <div class="item"><span>قهوة تركي</span><span class="price">15 جنيه</span></div>
+        <div class="item"><span>لاتيه</span><span class="price">18 جنيه</span></div>
+        <div class="item"><span>كابتشينو</span><span class="price">20 جنيه</span></div>
+      </div>
 
-    <h2>☕ المشروبات الساخنة</h2>
-    <div class="item"><span class="name">قهوة تركي</span><span class="price">15 جنيه</span></div>
-    <div class="item"><span class="name">كابتشينو</span><span class="price">18 جنيه</span></div>
-    <div class="item"><span class="name">لاتيه</span><span class="price">20 جنيه</span></div>
-    <div class="item"><span class="name">شاي نعناع</span><span class="price">10 جنيه</span></div>
+      <div class="column">
+        <h2>مشروبات باردة</h2>
+        <div class="item"><span>عصير برتقال</span><span class="price">22 جنيه</span></div>
+        <div class="item"><span>فرابتشينو</span><span class="price">28 جنيه</span></div>
+        <div class="item"><span>كوكتيل فواكه</span><span class="price">30 جنيه</span></div>
+      </div>
 
-    <h2>🥤 المشروبات الباردة</h2>
-    <div class="item"><span class="name">عصير مانجو</span><span class="price">25 جنيه</span></div>
-    <div class="item"><span class="name">كوكتيل فواكه</span><span class="price">28 جنيه</span></div>
-    <div class="item"><span class="name">فرابتشينو</span><span class="price">30 جنيه</span></div>
+      <div class="column">
+        <h2>حلويات</h2>
+        <div class="item"><span>وافل نوتيلا</span><span class="price">35 جنيه</span></div>
+        <div class="item"><span>تشيز كيك</span><span class="price">38 جنيه</span></div>
+        <div class="item"><span>مولتن كيك</span><span class="price">40 جنيه</span></div>
+      </div>
 
-    <h2>🍽️ أطباق رئيسية</h2>
-    <div class="item"><span class="name">فاهيتا فراخ</span><span class="price">65 جنيه</span></div>
-    <div class="item"><span class="name">باستا وايت صوص</span><span class="price">60 جنيه</span></div>
-    <div class="item"><span class="name">برجر لحم</span><span class="price">50 جنيه</span></div>
-
-    <h2>🍰 الحلويات</h2>
-    <div class="item"><span class="name">تشيز كيك فراولة</span><span class="price">35 جنيه</span></div>
-    <div class="item"><span class="name">مولتن كيك</span><span class="price">40 جنيه</span></div>
-    <div class="item"><span class="name">وافل بالنوتيلا</span><span class="price">38 جنيه</span></div>
+    </div>
   </div>
 </body>
 </html>
