--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>منيو كافيه نايت</title>
+  <title>سردينا | المنيو</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -12,110 +12,122 @@
       background-color: #0d1b2a;
       color: #ffffff;
     }
-    .menu-container {
-      max-width: 1000px;
+    header {
+      background-color: #1b263b;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+      color: #00bcd4;
+    }
+    .menu-section {
+      max-width: 1100px;
       margin: auto;
       padding: 40px 20px;
     }
-    h1 {
-      text-align: center;
-      font-size: 40px;
-      margin-bottom: 40px;
-      color: #00bcd4;
-    }
-    .menu-columns {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
-    .column {
-      flex: 1;
-      min-width: 300px;
-    }
-    h2 {
+    .section-title {
+      font-size: 28px;
       color: #ffc107;
-      border-bottom: 1px solid #555;
-      padding-bottom: 10px;
+      border-bottom: 2px solid #415a77;
       margin-bottom: 20px;
+      padding-bottom: 10px;
+    }
+    .menu-items {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
     .item {
-      border-bottom: 1px dashed #555;
-      padding-bottom: 15px;
-      margin-bottom: 20px;
+      background-color: #1b263b;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
     .item img {
       width: 100%;
-      max-height: 160px;
+      height: 160px;
       object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 10px;
     }
-    .info {
+    .item-info {
+      padding: 15px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
-    .info span {
+    .item-info span {
       font-size: 16px;
     }
     .price {
-      color: #ccc;
+      color: #90e0ef;
+    }
+    @media (max-width: 500px) {
+      header h1 { font-size: 28px; }
+      .section-title { font-size: 22px; }
     }
   </style>
 </head>
 <body>
-  <div class="menu-container">
-    <h1>منيو كافيه نايت</h1>
-    <div class="menu-columns">
+  <header>
+    <h1>سردينا</h1>
+  </header>
 
-      <div class="column">
-        <h2>مشروبات ساخنة</h2>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?turkish-coffee" alt="قهوة تركي" />
-          <div class="info"><span>قهوة تركي</span><span class="price">15 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?latte" alt="لاتيه" />
-          <div class="info"><span>لاتيه</span><span class="price">18 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?cappuccino" alt="كابتشينو" />
-          <div class="info"><span>كابتشينو</span><span class="price">20 جنيه</span></div>
-        </div>
+  <div class="menu-section">
+    <h2 class="section-title">مشروبات ساخنة</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?coffee" alt="قهوة تركي" />
+        <div class="item-info"><span>قهوة تركي</span><span class="price">15 جنيه</span></div>
       </div>
-
-      <div class="column">
-        <h2>مشروبات باردة</h2>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?orange-juice" alt="عصير برتقال" />
-          <div class="info"><span>عصير برتقال</span><span class="price">22 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?frappuccino" alt="فرابتشينو" />
-          <div class="info"><span>فرابتشينو</span><span class="price">28 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?cocktail" alt="كوكتيل فواكه" />
-          <div class="info"><span>كوكتيل فواكه</span><span class="price">30 جنيه</span></div>
-        </div>
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?latte" alt="لاتيه" />
+        <div class="item-info"><span>لاتيه</span><span class="price">20 جنيه</span></div>
       </div>
-
-      <div class="column">
-        <h2>حلويات</h2>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?waffle" alt="وافل نوتيلا" />
-          <div class="info"><span>وافل نوتيلا</span><span class="price">35 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?cheesecake" alt="تشيز كيك" />
-          <div class="info"><span>تشيز كيك</span><span class="price">38 جنيه</span></div>
-        </div>
-        <div class="item">
-          <img src="https://source.unsplash.com/300x200/?chocolate-cake" alt="مولتن كيك" />
-          <div class="info"><span>مولتن كيك</span><span class="price">40 جنيه</span></div>
-        </div>
-      </div>
-
     </div>
   </div>
+
+  <div class="menu-section">
+    <h2 class="section-title">مشروبات باردة</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?juice" alt="عصير برتقال" />
+        <div class="item-info"><span>عصير برتقال</span><span class="price">22 جنيه</span></div>
+      </div>
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?ice-coffee" alt="آيس كوفي" />
+        <div class="item-info"><span>آيس كوفي</span><span class="price">25 جنيه</span></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="menu-section">
+    <h2 class="section-title">الوجبات</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?burger" alt="برجر" />
+        <div class="item-info"><span>برجر لحم</span><span class="price">55 جنيه</span></div>
+      </div>
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?pizza" alt="بيتزا" />
+        <div class="item-info"><span>بيتزا مارجريتا</span><span class="price">65 جنيه</span></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="menu-section">
+    <h2 class="section-title">الحلويات</h2>
+    <div class="menu-items">
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?dessert" alt="حلو" />
+        <div class="item-info"><span>تشيز كيك</span><span class="price">35 جنيه</span></div>
+      </div>
+      <div class="item">
+        <img src="https://source.unsplash.com/400x300/?cake" alt="كيك" />
+        <div class="item-info"><span>مولتن كيك</span><span class="price">40 جنيه</span></div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
