--- a/index.html
+++ b/index.html
@@ -1,133 +1,31 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>سردينا | المنيو</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>منيو صور</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background-color: #0d1b2a;
-      color: #ffffff;
-    }
-    header {
-      background-color: #1b263b;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 36px;
-      color: #00bcd4;
-    }
-    .menu-section {
-      max-width: 1100px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    .section-title {
-      font-size: 28px;
-      color: #ffc107;
-      border-bottom: 2px solid #415a77;
-      margin-bottom: 20px;
-      padding-bottom: 10px;
-    }
-    .menu-items {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .item {
-      background-color: #1b263b;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    .item img {
-      width: 100%;
-      height: 160px;
-      object-fit: cover;
-    }
-    .item-info {
-      padding: 15px;
+      background-color: #000;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
+      gap: 20px;
+      padding: 20px;
     }
-    .item-info span {
-      font-size: 16px;
-    }
-    .price {
-      color: #90e0ef;
-    }
-    @media (max-width: 500px) {
-      header h1 { font-size: 28px; }
-      .section-title { font-size: 22px; }
+    img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>سردينا</h1>
-  </header>
 
-  <div class="menu-section">
-    <h2 class="section-title">مشروبات ساخنة</h2>
-    <div class="menu-items">
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?coffee" alt="قهوة تركي" />
-        <div class="item-info"><span>قهوة تركي</span><span class="price">15 جنيه</span></div>
-      </div>
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?latte" alt="لاتيه" />
-        <div class="item-info"><span>لاتيه</span><span class="price">20 جنيه</span></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="menu-section">
-    <h2 class="section-title">مشروبات باردة</h2>
-    <div class="menu-items">
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?juice" alt="عصير برتقال" />
-        <div class="item-info"><span>عصير برتقال</span><span class="price">22 جنيه</span></div>
-      </div>
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?ice-coffee" alt="آيس كوفي" />
-        <div class="item-info"><span>آيس كوفي</span><span class="price">25 جنيه</span></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="menu-section">
-    <h2 class="section-title">الوجبات</h2>
-    <div class="menu-items">
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?burger" alt="برجر" />
-        <div class="item-info"><span>برجر لحم</span><span class="price">55 جنيه</span></div>
-      </div>
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?pizza" alt="بيتزا" />
-        <div class="item-info"><span>بيتزا مارجريتا</span><span class="price">65 جنيه</span></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="menu-section">
-    <h2 class="section-title">الحلويات</h2>
-    <div class="menu-items">
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?dessert" alt="حلو" />
-        <div class="item-info"><span>تشيز كيك</span><span class="price">35 جنيه</span></div>
-      </div>
-      <div class="item">
-        <img src="https://source.unsplash.com/400x300/?cake" alt="كيك" />
-        <div class="item-info"><span>مولتن كيك</span><span class="price">40 جنيه</span></div>
-      </div>
-    </div>
-  </div>
+  <img src="منيو1.jpg" alt="صورة 1">
+  <img src="منيو2.jpg" alt="صورة 2">
+  <img src="منيبو3.jpg" alt="صورة 3">
 
 </body>
 </html>
