--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <title>منيو صور</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      padding: 20px;
-    }
-    img {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 10px;
-    }
-  </style>
-</head>
-<body>
-
-  <img src="منيو1.jpg" alt="صورة 1">
-  <img src="منيو2.jpg" alt="صورة 2">
-  <img src="منيبو3.jpg" alt="صورة 3">
-
-</body>
-</html>
+<iframe src="الموظفون قوة عظيمة.pdf" width="100%" height="600px"></iframe>
