--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-<iframe src="الموظفون قوة عظيمة.pdf" width="100%" height="600px"></iframe>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>تبادل العملات - USDT ⇆ جنيه</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 20px;
+      font-family: 'Cairo', sans-serif;
+      background-color: #ffffff;
+      color: #000000;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 10px;
+      font-size: 28px;
+    }
+
+    .rate-box {
+      background-color: #f5f5f5;
+      border-radius: 10px;
+      padding: 15px;
+      margin: 20px auto;
+      max-width: 400px;
+    }
+
+    .form-box {
+      background-color: #f9f9f9;
+      border: 1px solid #ddd;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 500px;
+      margin: auto;
+    }
+
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-family: 'Cairo', sans-serif;
+    }
+
+    button {
+      background-color: #28a745;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .contact-info {
+      margin-top: 30px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>تبادل العملات - USDT ⇆ جنيه مصري</h1>
+
+  <div class="rate-box">
+    <p>💵 سعر الشراء منك: <strong>48.5 جنيه</strong> لكل 1 USDT</p>
+    <p>💰 سعر البيع لك: <strong>50 جنيه</strong> لكل 1 USDT</p>
+  </div>
+
+  <div class="form-box">
+    <form id="exchangeForm">
+      <label>نوع العملية:</label>
+      <select name="type">
+        <option value="buy">شراء USDT</option>
+        <option value="sell">بيع USDT</option>
+      </select>
+
+      <label>المبلغ (USDT أو جنيه):</label>
+      <input type="number" name="amount" placeholder="اكتب المبلغ" required />
+
+      <label>ارفع سكرين شوت للتحويل:</label>
+      <input type="file" accept="image/*" required />
+
+      <button type="submit">إرسال الطلب</button>
+    </form>
+  </div>
+
+  <div class="contact-info">
+    <p>📱 فودافون كاش: <strong>01000000000000000</strong></p>
+    <p>🪙 محفظة USDT: <strong>oiprejoprjopeijrioejhiopr</strong></p>
+    <a href="https://wa.me/201000000000?text=مرحبًا، أود تنفيذ عملية تبادل USDT" target="_blank">
+      <button style="background-color:#25d366">راسلنا عبر واتساب</button>
+    </a>
+  </div>
+
+</body>
+</html>
