--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .rate-box {
-      background-color: #f5f5f5;
+      background-color: #008fc4;
       border-radius: 30px;
       padding: 15px;
       margin: 20px auto;
@@ -42,7 +42,7 @@
       padding: 10px;
       margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 20px;
       font-family: 'Cairo', sans-serif;
     }
 
@@ -92,8 +92,8 @@
   </div>
 
   <div class="contact-info">
-    <p>📱 فودافون كاش: <strong>01000000000000000</strong></p>
-    <p>🪙 محفظة USDT: <strong>oiprejoprjopeijrioejhiopr</strong></p>
+    <p>📱 فودافون كاش: <strong>01093419757</strong></p>
+    <p>🪙 محفظة USDT: <strong>ABCDEFGH</strong></p>
   </div>
 
   <script>
