--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     }
 
     .form-box {
-      background-color: #f9f9f9;
+      background-color: #008fc4;
       border: 1px solid #ddd;
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 40px;
       max-width: 500px;
       margin: auto;
     }
