--- a/index.html
+++ b/index.html
@@ -42,3 +42,7 @@
 
 </body>
 </html>
+
+<a href="tel:01111111111" style="display: inline-block; background-color: #28a745; color: white; padding: 10px 20px; text-decoration: none; border-radius: 8px; font-size: 18px;">
+  📞 اتصل بنا الآن
+</a>
