--- a/index.html
+++ b/index.html
@@ -46,3 +46,8 @@
 <a href="tel:01111111111" style="display: inline-block; background-color: #28a745; color: white; padding: 10px 20px; text-decoration: none; border-radius: 8px; font-size: 18px;">
   📞 اتصل بنا الآن
 </a>
+
+<a href="https://www.facebook.com/YourPageUsername" target="_blank"
+   style="display: inline-block; background-color: #1877F2; color: white; padding: 12px 25px; text-decoration: none; border-radius: 8px; font-size: 18px;">
+  👍 تابعنا على فيسبوك
+</a>
