--- a/index.html
+++ b/index.html
@@ -1,87 +1,180 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>موقعي الشخصي مع شريط أخبار</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Graphic Designer Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
-    .news-ticker {
-      width: 100%;
-      overflow: hidden;
-      background: #007BFF;       /* خلفية زرقاء */
-      padding: 20px 0;
+    body {
+      font-family: 'Montserrat', sans-serif;
+      color: #0d0d0d;
+      background-color: #fefefe;
+    }
+
+    header {
+      background: linear-gradient(135deg, #0047AB, #FFDD00);
+      padding: 2rem;
       text-align: center;
-    }
-
-    .ticker-text {
-      display: inline-block;
-      white-space: nowrap;
-      animation: scroll-left 12s linear infinite;
-      font-weight: bold;
-      font-size: 1.5rem;
-      color: #ffffff;
-    }
-
-    @keyframes scroll-left {
-      0%   { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-
-    .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: calc(100vh - 100px); /* طرح ارتفاع شريط الأخبار */
-      text-align: center;
-    }
-
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 25px;
-      font-size: 18px;
-      border-radius: 8px;
-      text-decoration: none;
       color: white;
     }
 
-    .call-btn {
-      background-color: #28a745;
+    header h1 {
+      font-size: 3rem;
+      font-weight: 900;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
 
-    .facebook-btn {
-      background-color: #1877F2;
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
+      background-color: #0d0d0d;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #FFDD00;
+    }
+
+    section {
+      padding: 4rem 2rem;
+    }
+
+    .about, .services, .contact {
+      background-color: #f0f0f0;
+      border-radius: 1rem;
+      margin: 2rem auto;
+      max-width: 1000px;
+      padding: 2rem;
+    }
+
+    .portfolio {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+
+    .portfolio img {
+      width: 100%;
+      border-radius: 1rem;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .portfolio img:hover {
+      transform: scale(1.05);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2.5rem;
+      color: #0047AB;
+      margin-bottom: 2rem;
+    }
+
+    footer {
+      background-color: #0047AB;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+    }
+
+    .contact input, .contact textarea {
+      width: 100%;
+      padding: 0.8rem;
+      margin-top: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+    }
+
+    .contact button {
+      background-color: #FFDD00;
+      border: none;
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      margin-top: 1rem;
+      border-radius: 0.5rem;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .contact button:hover {
+      background-color: #e6c800;
     }
   </style>
 </head>
 <body>
 
-  <!-- شريط الأخبار -->
-  <div class="news-ticker">
-    <div class="ticker-text">
-      📢 أهلاً بك في موقعي الشخصي! &nbsp;|&nbsp; خبر رقم 1 &nbsp;|&nbsp; خبر رقم 2 &nbsp;|&nbsp; خبر رقم 3
+  <header>
+    <h1>John Creative</h1>
+    <p>Graphic Designer | Visual Storyteller | Brand Artist</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about" class="about">
+    <h2>About Me</h2>
+    <p>Hello! I’m John, a bold and energetic graphic designer who creates striking designs that connect with audiences. I love vibrant colors, daring compositions, and turning ideas into stunning visuals.</p>
+  </section>
+
+  <section id="portfolio">
+    <h2>My Work</h2>
+    <div class="portfolio">
+      <img src="https://via.placeholder.com/400x300/0047AB/ffffff?text=Logo+Design" alt="Work 1">
+      <img src="https://via.placeholder.com/400x300/FFDD00/000000?text=Poster+Art" alt="Work 2">
+      <img src="https://via.placeholder.com/400x300/00BFFF/ffffff?text=Social+Media" alt="Work 3">
+      <img src="https://via.placeholder.com/400x300/FF6347/ffffff?text=Brand+Identity" alt="Work 4">
     </div>
-  </div>
+  </section>
 
-  <!-- المحتوى في المنتصف عموديًا -->
-  <div class="content">
-    <h1>مرحباً!</h1>
-    <p>هذا مثال على موقع شخصي بسيط.</p>
+  <section id="services" class="services">
+    <h2>What I Do</h2>
+    <ul>
+      <li>Logo & Brand Identity Design</li>
+      <li>Social Media Visuals</li>
+      <li>Poster & Print Design</li>
+      <li>UI Graphics for Web & App</li>
+    </ul>
+  </section>
 
-    <a href="tel:01111111111" class="btn call-btn">
-      📞 اتصل بنا الآن
-    </a>
+  <section id="contact" class="contact">
+    <h2>Get in Touch</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea rows="5" placeholder="Your Message"></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
-    <a href="https://www.facebook.com/YourPageUsername" target="_blank" class="btn facebook-btn">
-      👍 تابعنا على فيسبوك
-    </a>
-  </div>
+  <footer>
+    &copy; 2025 John Creative. All Rights Reserved.
+  </footer>
 
 </body>
 </html>
