--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, #1F1345, #1F1345);
+      background: linear-gradient(135deg, #1F1345, #2D1843);
       padding: 2rem;
       text-align: center;
       color: white;
