--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
   <header class="header">
     <div class="container topbar">
-      <div class="left-group"><img id="logo" class="logo" alt="شعار المطعم" /></div>
+      <div class="left-group">
+        <img id="logo" class="logo" alt="شعار المطعم" />
+      </div>
       <div class="right-group">
-        <div class="cart-pill" id="cartPill"><span>السلة:</span><strong id="cartTotal">0.00</strong><span>ج.م</span></div>
+        <div class="cart-pill" id="cartPill">
+          <span>السلة:</span>
+          <strong id="cartTotal">0.00</strong>
+          <span>ج.م</span>
+        </div>
         <div class="menu">
-          <button id="hamburger" class="hamburger">☰</button>
+          <button id="hamburger" class="hamburger" aria-label="القائمة">☰</button>
           <div id="menuDropdown" class="menu-dropdown">
             <button id="loginBtn" class="menu-item primary">تسجيل الدخول</button>
             <button id="settingsBtn" class="menu-item" style="display:none">الإعدادات</button>
@@ -22,30 +28,124 @@
         </div>
       </div>
     </div>
+
     <div class="container tools">
-      <div class="search"><input id="search" placeholder="ابحث..." /><button class="btn" id="clearSearch">مسح</button></div>
+      <div class="search">
+        <input id="search" placeholder="ابحث باسم الصنف أو الوصف..." />
+        <button class="btn" id="clearSearch">مسح</button>
+      </div>
       <div id="chips" class="row"></div>
     </div>
   </header>
-  <main class="container"><div id="grid" class="grid"></div><div id="empty" class="empty" style="display:none">لا توجد أصناف</div></main>
-  <div id="cartBar" class="cart-bar" style="display:none"><div class="cart-summary"><span>الإجمالي:</span><strong id="cartSum">0.00</strong><span>ج.م</span></div><button id="checkoutBtn" class="btn primary">إرسال الطلب</button></div>
-  <button class="fab" id="fab" style="display:none">+ إضافة صنف</button>
 
-  <dialog id="itemModal"><form method="dialog" id="itemForm"><h3>تفاصيل الصنف</h3><div class="form">
-    <div><label>اسم</label><input id="f_name" required /></div>
-    <div><label>سعر</label><input id="f_price" type="number" min="0" required /></div>
-    <div class="full"><label>وصف</label><textarea id="f_desc"></textarea></div>
-    <div><label>قسم</label><input id="f_cat" list="catsList" /></div><datalist id="catsList"></datalist>
-    <div class="full"><label>صورة</label><input id="f_imgFile" type="file" accept="image/*" /><img id="preview" class="preview" /></div>
-    <div class="full"><label>حالة</label><select id="f_status"><option value="available">متاح</option><option value="soldout">غير متاح</option><option value="hidden">مخفي</option></select></div>
-  </div><div class="toolbar"><button class="btn" value="cancel">إلغاء</button><button class="btn primary" value="default">حفظ</button></div></form></dialog>
+  <main class="container">
+    <div id="grid" class="grid"></div>
+    <div id="empty" class="empty" style="display:none">لا توجد أصناف مطابقة حاليًا.</div>
+  </main>
 
-  <dialog id="loginModal"><form method="dialog" id="loginForm"><h3>تسجيل الدخول</h3><input id="pinInput" type="password" /><div class="toolbar"><button class="btn" value="cancel">إلغاء</button><button class="btn primary" value="default">دخول</button></div></form></dialog>
+  <!-- شريط السلة السفلي -->
+  <div id="cartBar" class="cart-bar" style="display:none">
+    <div class="cart-summary">
+      <span>إجمالي الطلب:</span>
+      <strong id="cartSum">0.00</strong>
+      <span>ج.م</span>
+    </div>
+    <button id="checkoutBtn" class="btn primary">إرسال الطلب</button>
+  </div>
 
-  <dialog id="settingsModal"><form method="dialog" id="settingsForm"><h3>إعدادات</h3><label>واتساب</label><input id="waNumber" /><label>مكان اللوجو</label><select id="logoPos"><option value="left">يسار</option><option value="center">وسط</option><option value="right">يمين</option></select><label>لوجو</label><input id="logoFile" type="file" accept="image/*" /><div class="toolbar"><button class="btn" value="cancel">إلغاء</button><button class="btn primary" value="default">حفظ</button></div></form></dialog>
+  <!-- زر إضافة صنف (يظهر بعد الدخول فقط) -->
+  <button class="fab" id="fab" title="إضافة صنف" style="display:none">+ إضافة صنف</button>
 
-  <a id="whatsappFloat" class="float whatsapp" href="#">🟢</a>
-  <button id="scrollTop" class="float scrolltop">↑</button>
+  <!-- مودال إضافة/تعديل صنف -->
+  <dialog id="itemModal">
+    <form method="dialog" id="itemForm">
+      <h3>تفاصيل الصنف</h3>
+      <div class="form">
+        <div><label>اسم الصنف</label><input id="f_name" required /></div>
+        <div><label>السعر</label><input id="f_price" type="number" step="0.01" min="0" required /></div>
+        <div class="full"><label>الوصف</label><textarea id="f_desc" placeholder="وصف قصير"></textarea></div>
+        <div><label>القسم</label><input id="f_cat" list="catsList" placeholder="مثال: ساندويتشات" /></div>
+        <datalist id="catsList"></datalist>
+        <div class="full">
+          <label>صورة الصنف</label>
+          <input id="f_imgFile" type="file" accept="image/*" />
+          <img id="preview" class="preview" alt="معاينة" />
+        </div>
+        <div class="full">
+          <label>حالة العنصر</label>
+          <select id="f_status">
+            <option value="available">متاح</option>
+            <option value="soldout">غير متاح</option>
+            <option value="hidden">مخفي</option>
+          </select>
+        </div>
+      </div>
+      <div class="toolbar">
+        <button class="btn" value="cancel">إلغاء</button>
+        <button class="btn primary" id="saveItem" value="default">حفظ</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- مودال الدخول -->
+  <dialog id="loginModal">
+    <form method="dialog" id="loginForm">
+      <h3>تسجيل الدخول</h3>
+      <div class="form">
+        <div class="full"><label>رمز الإدارة</label><input id="pinInput" type="password" placeholder="الرمز الافتراضي 1234" /></div>
+      </div>
+      <div class="toolbar">
+        <button class="btn" value="cancel" id="loginCancel">إلغاء</button>
+        <button class="btn primary" value="default">دخول</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- مودال الإعدادات -->
+  <dialog id="settingsModal">
+    <form method="dialog" id="settingsForm">
+      <h3>إعدادات الأدمن</h3>
+      <div class="form">
+        <div class="full">
+          <label>رقم واتساب (201234567890)</label>
+          <input id="waNumber" placeholder="201234567890" />
+        </div>
+        <div>
+          <label>مكان اللوجو</label>
+          <select id="logoPos">
+            <option value="left">يسار</option>
+            <option value="center">منتصف</option>
+            <option value="right">يمين</option>
+          </select>
+        </div>
+        <div class="full">
+          <label>رفع لوجو</label>
+          <input id="logoFile" type="file" accept="image/*" />
+        </div>
+      </div>
+      <div class="toolbar">
+        <button class="btn" value="cancel">إلغاء</button>
+        <button class="btn primary" value="default">حفظ</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- مودال اسم العميل للطلب -->
+  <dialog id="nameModal">
+    <form method="dialog" id="nameForm">
+      <h3>اسم العميل لإرسال الطلب</h3>
+      <input id="customerName" placeholder="اسمك" />
+      <div class="toolbar">
+        <button class="btn" value="cancel">إلغاء</button>
+        <button class="btn primary" value="default">إرسال</button>
+      </div>
+    </form>
+  </dialog>
+
+  <!-- زر واتساب عائم + العودة للأعلى -->
+  <a id="whatsappFloat" class="float whatsapp" href="#" target="_blank" rel="noopener" title="تواصل واتساب">🟢</a>
+  <button id="scrollTop" class="float scrolltop" title="للأعلى">↑</button>
+
   <script src="script.js"></script>
 </body>
 </html>
